fix Java 11 idiom